integration: expand burp export and posting

--- a/man/hydro.1
+++ b/man/hydro.1
@@ -77,6 +77,9 @@ Include similarity scores in the JSON output for debugging.
 .BR --burp-export "="
 Write matched requests and responses to a Burp-compatible XML file.
 .TP
+.BR --burp-host "="
+POST matched findings to a Burp Collaborator endpoint.
+.TP
 .BR --pre-hook "="
 Execute a shell command prior to scanning to fetch authentication headers.
 .TP
